--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@observablehq/plot": "^0.6.17",
     "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-query-devtools": "^5.91.1",
+    "ag-grid-react": "^35.0.0",
     "next": "16.0.10",
     "react": "19.2.1",
     "react-dom": "19.2.1"
